--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "express-session": "^1.18.1",
+    "firebase": "^11.0.1",
+    "firebase-admin": "^12.7.0"
   }
 }
